--- a/e-commerce/package.json
+++ b/e-commerce/package.json
@@ -1,7 +1,6 @@
 {
   "name": "e-commerce",
   "version": "0.1.0",
-  "homepage":"http://manheicatherine.github.io/e-commerceProject/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -26,9 +25,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
